--- a/cadastrar_adm.html
+++ b/cadastrar_adm.html
@@ -5,127 +5,103 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Novo Cadastro</title>
 
-<link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
-
 <style>
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap");
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
+    font-family:Poppins, sans-serif;
 }
 
-body {
+body{
     min-height: 100vh;
-    background: linear-gradient(135deg, #000, #1a1a1a);
+    background: radial-gradient(circle at top right, #444, #000);
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.card {
-    width: 90%;
-    max-width: 380px;
-    padding: 35px 25px;
-    border-radius: 18px;
-    background: rgba(255,255,255,0.08);
-    backdrop-filter: blur(10px);
-    border: 1px solid rgba(255,255,255,0.15);
     color: #fff;
 }
 
-.card h1 {
+.box{
+    width:90%;
+    max-width: 380px;
+    padding: 35px 25px;
+    border-radius: 18px;
+    background:rgba(0,0,0,.65);
+    backdrop-filter:blur(10px);
+    border:1px solid rgba(255,255,255,0.15);
+    color:#fff; 
+    box-shadow: 0 20px 40px rgba(0,0,0,0.8);
+}
+
+.box h2 {
     text-align: center;
     margin-bottom: 25px;
 }
 
-.input-box {
-    position: relative;
-    margin-bottom: 16px;
+input,button{
+    width:100%;
+    padding:12px;
+    margin-bottom:12px;
+    border:none;
+    border-radius:25px;
 }
 
-.input-box input {
-    width: 100%;
-    padding: 14px 45px 14px 15px;
-    border-radius: 30px;
-    border: none;
-    outline: none;
-    background: rgba(255,255,255,0.12);
-    color: #fff;
+button{
+    background:#fff;
+    font-weight:bold;
+    cursor:pointer;
 }
 
-.input-box i {
-    position: absolute;
-    right: 15px;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 20px;
-}
 
-.btn {
-    width: 100%;
-    padding: 14px;
-    border-radius: 30px;
-    border: none;
-    font-weight: bold;
-    cursor: pointer;
-    margin-top: 10px;
-}
+a { 
+    color:#fff; text-decoration:none; 
 
-.btn-cadastrar {
-    background: #fff;
-    color: #000;
-}
-
-.footer {
-    text-align: center;
-    margin-top: 18px;
-    font-size: 13px;
-}
-
-.footer a {
-    color: #fff;
-    font-weight: bold;
-    text-decoration: none;
 }
 </style>
 </head>
 
 <body>
 
-<div class="card">
-    <h1>Novo Cadastro</h1>
+<div class="box">
+<h2>Novo Cadastro</h2>
 
-    <div class="input-box">
-        <input type="text" placeholder="Nome Completo">
-        <i class='bx bx-user'></i>
-    </div>
+<input id="nome" placeholder="Nome completo">
+<input id="celular" placeholder="Celular">
+<input id="email" placeholder="E-mail">
+<input id="senha" type="password" placeholder="Senha (mín. 6 caracteres)">
+<input id="confirmar" type="password" placeholder="Confirmar senha">
 
-    <div class="input-box">
-        <input type="tel" placeholder="Celular">
-        <i class='bx bx-phone'></i>
-    </div>
+<button onclick="cadastrar()">CADASTRAR</button>
 
-    <div class="input-box">
-        <input type="email" placeholder="E-mail">
-        <i class='bx bx-envelope'></i>
-    </div>
-
-    <div class="input-box">
-        <input type="password" placeholder="Senha (mín 6 caracteres)">
-    </div>
-
-    <div class="input-box">
-        <input type="password" placeholder="Confirme a senha">
-    </div>
-
-    <button class="btn btn-cadastrar">CADASTRAR</button>
-
-    <div class="footer">
-        Já tem uma conta?
-        <a href="adm_login.html">Fazer Login</a>
-    </div>
+<p style="text-align:center">
+<a href="adm.html">Já tem uma conta? Fazer Login</a>
+</p>
 </div>
+
+<script>
+function cadastrar(){
+    if(senha.value !== confirmar.value){
+        alert("Senhas não conferem");
+        return;
+    }
+
+    const admins = JSON.parse(localStorage.getItem("admins")) || [];
+
+    admins.push({
+        nome:nome.value,
+        celular:celular.value,
+        email:email.value,
+        senha:senha.value
+    });
+
+    localStorage.setItem("admins", JSON.stringify(admins));
+    alert("Cadastro realizado!");
+    location.href="adm.html";
+}
+</script>
 
 </body>
 </html>
