--- a/recuperar_senha.html
+++ b/recuperar_senha.html
@@ -5,103 +5,91 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Recuperar Senha</title>
 
-<link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
-
 <style>
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap");
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
+    font-family:Poppins, sans-serif;
 }
-
-body {
+body{
     min-height: 100vh;
-    background: linear-gradient(135deg, #000, #1a1a1a);
+    background: radial-gradient(circle at top right, #444, #000);
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.card {
-    width: 90%;
-    max-width: 380px;
-    padding: 35px 25px;
-    border-radius: 18px;
-    background: #1c1c1c;
-    border: 1px solid #ff9800;
     color: #fff;
 }
 
-.card h1 {
+.box{
+    width:100%;
+    max-width:360px;
+    background:rgba(0,0,0,.65);
+    border-radius:15px;
+    padding:25px;
+    box-shadow: 0 20px 40px rgba(0,0,0,0.8);
+}
+
+.box h2 {
     text-align: center;
     margin-bottom: 25px;
 }
 
-.input-box {
-    position: relative;
-    margin-bottom: 20px;
+input,button{
+    width:100%;
+    padding:12px;
+    margin-bottom:12px;
+    border:none;
+    border-radius:25px;
 }
 
-.input-box input {
-    width: 100%;
-    padding: 14px 45px 14px 15px;
-    border-radius: 8px;
-    border: none;
-    outline: none;
-    background: #2a2a2a;
-    color: #fff;
+button{
+    background:#ff9800;
+    color:#fff;
+    font-weight:bold;
+    cursor:pointer;
 }
 
-.input-box i {
-    position: absolute;
-    right: 15px;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 20px;
-}
-
-.btn {
-    width: 100%;
-    padding: 14px;
-    border-radius: 8px;
-    border: none;
-    font-weight: bold;
-    cursor: pointer;
-    background: #fff;
-    color: #000;
-}
-
-.footer {
-    text-align: center;
-    margin-top: 18px;
-    font-size: 13px;
-}
-
-.footer a {
-    color: #fff;
-    font-weight: bold;
-    text-decoration: none;
+a { 
+    color:#fff; text-decoration:none; 
 }
 </style>
 </head>
 
 <body>
 
-<div class="card">
-    <h1>Recuperar Senha</h1>
+<div class="box">
+<h2>Recuperar Senha</h2>
 
-    <div class="input-box">
-        <input type="email" placeholder="Digite seu E-mail">
-        <i class='bx bx-envelope'></i>
-    </div>
+<input id="email" placeholder="Digite seu E-mail">
 
-    <button class="btn">RECUPERAR</button>
+<button onclick="recuperar()">RECUPERAR</button>
 
-    <div class="footer">
-        <a href="adm_login.html">Voltar para o Login</a>
-    </div>
+<p style="text-align:center">
+<a href="adm.html">Voltar para o Login</a>
+</p>
 </div>
+
+<script>
+function recuperar(){
+    const admins = JSON.parse(localStorage.getItem("admins")) || [];
+    const user = admins.find(a => a.email === email.value);
+
+    if(!user){
+        alert("E-mail não encontrado");
+        return;
+    }
+
+    const nova = Math.random().toString(36).slice(-8);
+    user.senha = nova;
+    localStorage.setItem("admins", JSON.stringify(admins));
+
+    alert("Nova senha gerada: " + nova);
+    location.href="adm.html";
+}
+</script>
 
 </body>
 </html>
