--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
             <div class="grupo1">
                 <a class="btn" href="porcoes.html">PORÇÕES</a>
-                <a class="btn orange" href="#">SUCOS/REFRIGERANTES</a>
+                <a class="btn orange" href="suco_refrigerante.html">SUCOS/REFRIGERANTES</a>
             </div>
             
             <div class="grupo2">
