--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
             
             <div class="grupo2">
-                <a class="btn" href="#">CERVEJAS</a>
+                <a class="btn" href="cerveja.html">CERVEJAS</a>
                 <a class="btn" href="#">DRINKS</a>
             </div>          
         </div>
