TEMOS gin no botão para acrescentar

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             
             <div class="grupo2">
                 <a class="btn" href="cerveja.html">CERVEJAS</a>
-                <a class="btn" href="#">DRINKS</a>
+                <a class="btn" href="#">DRINKS/GIN</a>
             </div>          
         </div>
 
