atualização passando nome para descrição

--- a/drinks_gin.html
+++ b/drinks_gin.html
@@ -40,9 +40,9 @@
     <div class="item-img"><img src="img/caipiroska.jpg" alt="Caipiroska"></div>
 
     <div class="item-info">
-        <h3>CAIPIROSKA(SMINORFF/SAGATIBA)</h3>
+        <h3>CAIPIROSKA</h3>
         <span class="preco">R$ XXX</span>
-        <p>xxxxxxxx</p>
+        <p>(SMINORFF/SAGATIBA)</p>
 
         <div class="item-acoes">
             <button class="btn-icon"><i class='bx bxs-heart'></i></button>
